package jarviscore

// CtrlShell -
type CtrlShell struct {
}

// Run -
func (ctrl *CtrlShell) Run(command string) (result string, err error) {
	return
}
