@startuml jarviscore
class JarvisNode
class jarvisNode
class jarvisClient
class jarvisServer
class peerAddrMgr
class peerInfo
class BaseInfo
class nodeInfoMgr
class NodeInfo
class clientInfo
class ctrlMgr
class Ctrl
class CtrlShell
class connMgr

jarvisClient : mapClientInfo
jarvisServer : mapChanNodeInfo 
Ctrl : Run()

ctrlMgr o-- Ctrl
Ctrl <|.. CtrlShell

JarvisNode <|.. jarvisNode
jarvisNode *-- BaseInfo
jarvisNode *-- nodeInfoMgr
jarvisNode *-- jarvisClient
jarvisNode *-- jarvisServer
jarvisNode *-- peerAddrMgr
peerAddrMgr o-- peerInfo
nodeInfoMgr o-- NodeInfo
jarvisClient o-- clientInfo

jarvisClient ..> ctrlMgr
jarvisServer ..> ctrlMgr

clientInfo --> connMgr
@enduml